
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;
typedef int pid_t ;


 int call_futex_lock_pi_with_priority ;
 scalar_t__ did_dm_tid_read ;
 scalar_t__ do_dm_tid_read ;
 int is_thread_desched ;
 int is_thread_desched_lock ;
 int last_tid ;
 int pthread_cond_wait (int *,int *) ;
 int pthread_create (int *,int ,int ,void*) ;
 int pthread_mutex_lock (int *) ;
 int pthread_mutex_unlock (int *) ;
 int sync_with_child (int ,scalar_t__*,scalar_t__*) ;

__attribute__((used)) static pthread_t create_thread_do_futex_lock_pi_with_priority(int prio)
{
 pthread_t th4;
 pid_t pid;

 do_dm_tid_read = 0;
 did_dm_tid_read = 0;

 pthread_mutex_lock(&is_thread_desched_lock);
 pthread_create(&th4, 0, call_futex_lock_pi_with_priority, (void *)(long)prio);
 pthread_cond_wait(&is_thread_desched, &is_thread_desched_lock);

 pid = last_tid;

 sync_with_child(pid, &do_dm_tid_read, &did_dm_tid_read);

 pthread_mutex_unlock(&is_thread_desched_lock);

 return th4;
}
