; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_35370.c_create_thread_do_futex_lock_pi_with_priority.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_35370.c_create_thread_do_futex_lock_pi_with_priority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@do_dm_tid_read = common dso_local global i64 0, align 8
@did_dm_tid_read = common dso_local global i64 0, align 8
@is_thread_desched_lock = common dso_local global i32 0, align 4
@call_futex_lock_pi_with_priority = common dso_local global i32 0, align 4
@is_thread_desched = common dso_local global i32 0, align 4
@last_tid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @create_thread_do_futex_lock_pi_with_priority to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_thread_do_futex_lock_pi_with_priority(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i64 0, i64* @do_dm_tid_read, align 8
  store i64 0, i64* @did_dm_tid_read, align 8
  %5 = call i32 @pthread_mutex_lock(i32* @is_thread_desched_lock)
  %6 = load i32, i32* @call_futex_lock_pi_with_priority, align 4
  %7 = load i32, i32* %2, align 4
  %8 = sext i32 %7 to i64
  %9 = inttoptr i64 %8 to i8*
  %10 = call i32 @pthread_create(i32* %3, i32 0, i32 %6, i8* %9)
  %11 = call i32 @pthread_cond_wait(i32* @is_thread_desched, i32* @is_thread_desched_lock)
  %12 = load i32, i32* @last_tid, align 4
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @sync_with_child(i32 %13, i64* @do_dm_tid_read, i64* @did_dm_tid_read)
  %15 = call i32 @pthread_mutex_unlock(i32* @is_thread_desched_lock)
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare !callback !2 dso_local i32 @pthread_create(i32*, i32, i32, i8*) #1

declare dso_local i32 @pthread_cond_wait(i32*, i32*) #1

declare dso_local i32 @sync_with_child(i32, i64*, i64*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
